Alignment and wierd CSS issues

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 body{
-    background-color: #0B0C10;
-    min-height: 100vh;
-    width: 100vw;
+    background-color: #1F2833;
+    font-family: 'Roboto', sans-serif;
 }
